<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <br.com.bluedot.redevalor.custom.ToolbarLogin
        android:id="@+id/toolbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_login"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/login_description"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/big_margin"
        android:paddingRight="@dimen/big_margin"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <br.com.bluedot.redevalor.custom.PasswordView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUser" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin">

        <Button
            android:id="@+id/btLogin"
            style="@style/button_pink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/login_singin" />

        <Button
            android:id="@+id/tvRegister"
            style="@style/button_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btLogin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/login_register" />
    </RelativeLayout>


</RelativeLayout>
